ecs-fargate/modules/alb/alb.tf
resource "aws_alb" "main" {
  name            = var.alb_name
  internal        = var.internal
  load_balancer_type = "application"
  subnets         = var.subnets
  security_groups = [aws_security_group.main.id]

  tags = {
    Name = var.alb_name
  }
}

resource "aws_alb_target_group" "main" {
  name        = "${var.alb_name}-TG"
  port        = var.target_group_port
  protocol    = "HTTP"
  vpc_id      = var.vpc_id
  target_type = "ip"

  health_check {
    path = var.health_check
  }


  tags = {
    Name = "${var.alb_name}-TG"
  }
}


resource "aws_alb_listener" "http" {
  load_balancer_arn = aws_alb.main.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }

}

resource "aws_lb_listener" "https" {
  load_balancer_arn = aws_alb.main.arn
  port              = "443"
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = var.certificate_arn

  default_action {
    type             = "forward"
    target_group_arn = aws_alb_target_group.main.arn
  }
}

resource "aws_security_group" "main" {
  name        = "sg_${var.alb_name}"
  description = "${var.alb_name} Load Balancer Security Group"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

}

output "target_group_arn" {
  value = aws_alb_target_group.main.arn  
}
